--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "gh-pages": "^3.2.3",
+    "jest-fetch-mock": "^3.0.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -49,6 +49,7 @@
     "@babel/core": "^7.12.3",
     "@babel/eslint-parser": "^7.14.9",
     "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
