--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "^4.3.1"
+    "react-select": "^4.3.1",
+    "redux": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
